apps/clubs/conjure/website/prod/httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: conjure-ingress
spec:
  virtualhost:
    fqdn: conjure.etsmtl.ca
    tls:
      secretName: conjure-cert-tls
      minimumProtocolVersion: "1.3"
  routes:
    - conditions:
        - prefix: /
      enableWebsockets: true
      services:
        - name: conjure-service
          port: http
