apps/clubs/conjure/website/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: conjure-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: contour
  tls:
    - hosts:
        - conjure.etsmtl.ca
      secretName: conjure-cert-tls
  rules:
    - host: conjure.etsmtl.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: conjure-service
                port:
                  number: 3000
